ADD: position fixed

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <div class="my-profile">my profile</div>
         </header>
         
-        <div class="login-page">
+        <div class="page">
 
                 <div class="login"> 
                     <div ><span class="button">Accedi</span></div>
                 </div>
 
-                <div class="page">
+                <div class="page_section">
                 <h1>Sezione 1</h1>
 
                 <div class="cards">
